--- a/package.json
+++ b/package.json
@@ -11,32 +11,28 @@
   "license": "ISC",
   "dependencies": {
     "@codahq/packs-sdk": "^1.8.6",
-    "node-html-parser": "^5.3.3"
+    "node-html-parser": "^5.4.2"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.1",
-    "@types/chai-as-promised": "^7.1.5",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^17.0.38",
-    "@types/sinon": "^10.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.30.3",
-    "@typescript-eslint/experimental-utils": "^5.30.3",
-    "@typescript-eslint/parser": "^5.30.3",
-    "chai": "^4.3.4",
-    "chai-as-promised": "^7.1.1",
-    "eslint": "^8.18.0",
+    "@eslint/js": "^9.17.0",
+    "@types/chai": "^4.3.20",
+    "@types/chai-as-promised": "^7.1.8",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.45",
+    "@types/sinon": "^10.0.20",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
+    "chai": "^4.5.0",
+    "chai-as-promised": "^7.1.2",
+    "eslint": "^8.57.1",
     "eslint-plugin-ban": "^1.6.0",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-local": "^1.0.0",
     "eslint-plugin-prefer-let": "^3.0.1",
     "json-schema": "file:../../../../..",
-    "mocha": "^10.0.0",
-    "sinon": "^14.0.0",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.5.4",
-    "@eslint/js": "^9.9.1",
-    "@typescript-eslint/eslint-plugin": "^8.3.0",
-    "@typescript-eslint/parser": "^8.3.0",
-    "eslint": "^9.9.1"
+    "mocha": "^10.8.2",
+    "sinon": "^14.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5"
   }
 }
